testsuite/tests/mdo/should_fail/mdofail005.stderr

mdofail005.hs:11:14: error: [GHC-58481]
    Parse error on input ‘<-’.
    Suggested fix: Perhaps you intended to use RecursiveDo
